2004-11-30  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates.

2004-11-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmenushell.c (gtk_menu_shell_button_release): Don't
	do the popup-on-click handling for menubars.  (#159931, 
	Søren Sandmann)
	
	* gtk/gtkmenuitem.c (gtk_real_menu_item_select): Don't 
	handle popup delay if the submenu is already mapped.	

Mon Nov 29 16:56:33 2004  Manish Singh  <yosh@gimp.org>

	* gtk/gtkcellview.h: remove gtk_cell_view_set_cell_data() declaration.

2004-11-29  Federico Mena Quintero  <federico@ximian.com>

	Merged from gtk-2-4:

	* gtk/gtkfilechooserdefault.c (trap_activate_cb): Don't handle
	Enter if we are in SELECT_FOLDER or CREATE_FOLDER actions.  This
	lets us navigate the file system more easily.
	(gtk_file_chooser_default_should_respond): If we are in
	SELECT_FOLDER or CREATE_FOLDER modes, return TRUE if something is
	selected.

Mon Nov 29 17:51:51 2004  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtksequence.c (_gtk_sequence_sort_changed): If the item is
	already in the right place, don't move it. Bug #157670.
	
	* gtk/gtksequence.c (already_in_place): New function

Mon Nov 29 17:28:53 2004  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtksequence.c (_gtk_sequence_sort): Take nodes in reverse
	order to make sure sort is stable.

2004-11-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c (cell_view_is_sensitive): Don't call
	gtk_cell_view_set_cell_data() from here.

	* gtk/gtk.symbols: Remove gtk_cell_view_set_cell_data()

	* gtk/gtkcellview.c (gtk_cell_view_get_cell_renderers): Call 
	gtk_cell_view_set_cell_data() from here.
	(gtk_cell_view_set_cell_data): Make static.

	* gtk/gtkcombobox.c (gtk_combo_box_menu_popup): Make menu mode
	work better when resizing the combo box.

	Determine the direction of XKB groups from their content, 
	not by looking for hardcoded keymap names.  (#116626, patch by 
	Behdad Esfahbod, based on an earlier patch by Ilya Konstantinov)
	